feat: 作者信息修改

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "surround-contents",
   "version": "0.0.1",
   "repository": "https://github.com/yu1596882018/surroundContents.git",
-  "author": "wangxinyu <xinyu.wang@hexasino.com>",
+  "author": "yu1596882018 <1596882018@qq.com>",
   "keywords": [
     "surroundContents",
     "rangeAt",
