--- a/package.json
+++ b/package.json
@@ -9,13 +9,27 @@
     "批注"
   ],
   "license": "MIT",
+  "description": "原生 Range.surroundContents 的增强版，支持跨节点包裹。",
+  "bugs": {
+    "url": "https://github.com/yu1596882018/surround-contents/issues"
+  },
+  "homepage": "https://github.com/yu1596882018/surround-contents#readme",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "build": "father-build"
+    "build": "father-build",
+    "lint": "eslint src --ext .js",
+    "format": "prettier --write src"
   },
   "main": "lib/index.js",
   "module": "es/index.js",
   "devDependencies": {
-    "father-build": "^1.19.1"
+    "eslint": "^8.0.0",
+    "father-build": "^1.19.1",
+    "jest": "^29.0.0",
+    "prettier": "^2.8.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1"
+  }
 }
